# Emergent-Playtest-Designer

./: .dockerignore  .gitignore  DATABASE_INTEGRATION.md  Dockerfile  FINAL_TRAINING_TEST.py  IMPLEMENTATION_SUMMARY.md  LICENSE  MISSING_FUNCTIONALITY.md  PRD.md  PROJECT_STATUS.md  PROOF_OF_CONCEPT.py  QUICK_START.md  README.md  UNITY_MLAGENTS_SETUP.md  WORKING_TRAINING_TEST.py  analyze.py  cli_intelligent.py  cli_simple.py  debug_agents.py  debug_unity_deep.py  docker-compose.yml  env.example  fix_connection_now.py  fresh_port_test.py  install.sh  playtest.py  pyproject.toml  quick_test.py  replay.py  requirements-minimal.txt  requirements.txt  setup.py  setup_mlagents.py  setup_training_scenario.py  simple_connection_test.py  test_any_behaviors.py  test_final.py  test_isolated_modules.py  test_unity_connection.py  test_unity_manual.py  (+2 more)
.cursor/rules/: prd.mdc
Unity/Scripts/: ExploitDetector.cs  PlaytestAgent.cs  PlaytestManager.cs  PlaytestSideChannel.cs
config/: trainer_config.yaml
emergent_playtest_designer/: __init__.py  cli.py  mocks.py
emergent_playtest_designer/agents/: __init__.py  evolutionary_agent.py  intelligent_explorer.py  novelty_search_agent.py  reinforcement_agent.py
emergent_playtest_designer/api/: __init__.py  (+2 more)
examples/: custom_agent.py  demo_game.py  intelligent_demo.py  mlagents_example.py  mlagents_with_database.py  run_example.py  simple_platformer.py  simple_test.py
scripts/: demo_complete_system.py  setup_database.py  test_database.py  test_database_offline.py  test_gpu_windows.py  test_mlagents_connection.py  test_system.py
tests/: __init__.py  conftest.py  test_basic_functionality.py
(+49 files in other folders)
